# 构建/工具配置
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py_learn"
version = "0.1.0"
description = "学习用项目"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tqdm"
]

[tool.black]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
